Bug 460113 - large completions popup when typing in string literal
Summary: large completions popup when typing in string literal
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-08 09:21 UTC by Eric Armbruster
Modified: 2022-10-10 18:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
large_completions_window (2.10 MB, video/mp4)
2022-10-08 09:22 UTC, Eric Armbruster
Details
x11_large_completions (1018.26 KB, video/mp4)
2022-10-08 09:45 UTC, Eric Armbruster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Armbruster 2022-10-08 09:21:23 UTC
STEPS TO REPRODUCE
1. type a single letter in a string literal c++

OBSERVED RESULT
very large completions window


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Eric Armbruster 2022-10-08 09:22:16 UTC
Created attachment 152642 [details]
large_completions_window
Comment 2 Bharadwaj Raju 2022-10-08 09:25:16 UTC
This is supposed to be function signature completion, apparently. But obviously firing at the wrong time. Can be disabled from "Show function signature when typing function calls" in LSP plugin settings.
Comment 3 Eric Armbruster 2022-10-08 09:45:24 UTC
Created attachment 152643 [details]
x11_large_completions
Comment 4 Eric Armbruster 2022-10-08 10:06:09 UTC
Can confirm what Bharadwaj says.
Comment 5 Bug Janitor Service 2022-10-09 13:36:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/938
Comment 6 Christoph Cullmann 2022-10-10 18:19:37 UTC
Git commit b0129eeabfd4a7702fa2ac90d7c2928998827332 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 10/10/2022 at 18:19.
Pushed by cullmann into branch 'master'.

LSP: Avoid triggering signature help all the time

In some cases it can lead to really weird results.

M  +22   -4    addons/lspclient/lspclientcompletion.cpp

https://invent.kde.org/utilities/kate/commit/b0129eeabfd4a7702fa2ac90d7c2928998827332