LSP: Avoid triggering signature help all the time

In some cases it can lead to really weird results.

BUG: 460113